# EdGenA2

./: BremSpec.C  BremSpec_100_1557.txt  BremSpec_300_1557.root  BremSpec_300_1557.txt  CMakeLists.txt  EdGen.cxx  EdGenPhaseSpace.cxx  EdGenPhaseSpace.h  EdInput.cxx  EdInput.h  EdModel.cxx  EdModel.h  EdOutput.cxx  EdOutput.h  EdOutputBos.cxx  EdOutputBos.h  EdPhysics.cxx  EdPhysics.h  EdProcess.cxx  EdProcess.h  FindROOT.cmake  Makefile  README.md  RealBremFit.C  bos_fortran.f  git_commands.txt
output/: FermiDist.root  analysis.C  analysis.h  analysis_5.C  analysis_5.h  analysis_6.C  analysis_6.h  analysis_test.C  analysis_test.h  create_selector.C  eg_pdg_table.txt  energy.root  energy.txt  energy11_13.txt  energy2.C  energy2.txt  energy3.txt  new_analysis.C  new_analysis.h  run_analysis.C  run_analysis_5.C  run_analysis_6.C  run_analysis_test.C  run_newAnalysis.C  run_new_analysis.C  run_test.sh
output/Old_Input_Files/: input_1557MeV_gamma.dat~
